# sd-instagram-backend-mvp

./: .env.example  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  functional.yml  lint.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/instagram/: __init__.py  config.py  database.py  main.py
src/instagram/models/: __init__.py  feed_entry.py  follow.py  like.py  post.py  user.py
src/instagram/routers/: __init__.py  feed.py  follow.py  likes.py  posts.py  search.py  users.py
src/instagram/schemas/: __init__.py  feed.py  follow.py  like.py  post.py  user.py
src/instagram/services/: __init__.py  feed_service.py  follow_service.py  like_service.py  post_service.py  search_service.py  user_service.py
tests/: conftest.py
tests/functional/: conftest.py  test_endpoints.py  test_healthz.py
tests/unit/: test_hashtags.py
verify/: manifest.env
verify/acceptance/: conftest.py  test_fr1_create_post.py  test_fr2_get_post.py  test_fr3_user_posts.py  test_fr4_follow.py  test_fr5_feed.py  test_fr6_search.py  test_fr7_like.py  test_fr8_health.py
